Added the SOTZ Box to the Store

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ h4 {
   font-family: 'IM Fell English SC', serif;
 }
 
+.big-text {
+  font-family: 'IM Fell English SC', serif;
+}
+
 #nav-bar {
   width: 100%;
   margin: 0;
